tests/parser/invalid/002-if-without-end.man
def main()
    if foo()
        bar()
end
